Update client files and Dockerfile

--- a/client/python/templates/index.html
+++ b/client/python/templates/index.html
@@ -90,5 +90,15 @@
       <p id="confirmation"></p>
     </div>
 
+    <div class="resp-card">
+
+      </a>
+      <p id="prediction">Prediction will be displayed here.</p>
+      <p id="result">{{ prediction }} kW-h</p>
+
+
+
+
+</div>
   </body>
 </html>
